--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
       "start": "node server.js",
       "dev": "nodemon server.js",
       "seed": "node scripts/seed.js",
+      "seed-prod": "node scripts/seedDatabase.js",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
